# quera_llm_chain_of_tought

./: .gitignore  README.md  clean_output.ipynb  cot_future.ipynb  cot_in_langchain.ipynb  pyproject.toml  source-code.ipynb
Chain_of_tought/: clean_output.ipynb  cot_in_langchain.ipynb  self_consistency.ipynb
Data preprocessing in langchain/Principle of preprocessing/: source-code.ipynb
RAG/: source-code.ipynb
Vectors/: encode_tariffs.py  encoding_hscodes.py  semantic_search_app.py
Vectors/chroma_db/: chroma.sqlite3
Vectors/semantic_search/: config.py  documents.py  ui.py  vector_store.py
Vectors/semantic_search/data/: trf.xlsx
