[project]
name = "LLM-Quera"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "arabic-reshaper>=3.0.1",
    "cohere>=5.21.1",
    "langchain>=1.3.13",
    "langchain-cohere>=0.6.0",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.9",
    "python-bidi>=0.6.11",
    "python-dotenv>=1.2.2",
]
