[project]
name = "LLM-Quera"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "arabic-reshaper>=3.0.1",
    "cohere>=5.21.1",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-cohere>=0.6.0",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.9",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "python-bidi>=0.6.11",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pip>=26.1.2",
]
